--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
     
     <header>
         <div class="container">
-            <h1><a href="index.html">Data Collector</a></h1>
+            <h1><a href="index.html">Data Collectors</a></h1>
             <ul>
                 <li class="active"><a href="index.html">Home</a></li>
                 <li><a href="laporan.html">Laporan</a></li>
@@ -29,6 +29,62 @@
                 keterangan yang dialami pada website ini.
             </h4>  
         </section>
+        <br>
+        <hr>
+        <br>
+        <div>
+            <div>
+                <h1 style="text-align: center;">List Spam Messages</h1>
+            </div>
+            <div class="container" id="data">
+            </div>
+        </div>
 
 </body>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.js" type="text/javascript"></script>
+<script>
+    var BASE_URL = "https://www.portal-desa.web.id/public/api/findAll";
+    axios.get(BASE_URL,
+    {
+        headers:{
+            'Content-Type': 'application/json',
+            'Access-Control-Allow-Origin' : '*',
+            'Access-Control-Allow-Headers' : '*'
+        }
+    })
+    .then((response) => {
+        var pesans = JSON.parse(JSON.stringify(response.data.data));
+        var node = document.createElement("li");
+        for(var i=0 ; i<response.data.data[0].length ; i++ ){
+            var textnode = document.createTextNode(response.data.data[i].isi);
+            node.appendChild(textnode);        
+            console.log(response.data.data[i].isi)
+        }
+        console.log(pesans);
+        // document.getElementById("data").appendChild(node);
+        // console.log(response.data.data);
+        for(var i in pesans){
+            console.log(pesans[i].isi);
+            $("#data").
+                append("<div class='container' id='card'>\
+						      <div class='row'>\
+						        <div class='col-md-2'>\
+						          <h5>" + pesans[i].judul + "</h5>\
+						        </div>\
+						        <div class='col-md-2'>\
+						         <h6>SKU : " + pesans[i].isi + "</h6>\
+						        </div>\
+						        <div class='col-md-2'>\
+						          <h5>Rp " + pesans[i].nomor + "</h5>\
+						        </div>\
+						      </div>\
+						    </div>\
+                            </br>"
+                            );
+        }
+    }, (error) => { 
+        console.log(error);
+    });
+</script>
 </html>
